from abc import ABC, abstractmethod
import logging

class BaseExploit:
    def __init__(self, *args, **kwargs):
        """
        Initialize the BaseExploit with necessary parameters.
        """
        self.logger = logging.getLogger(self.__class__.__name__)
        self.logger.info(f"{self.__class__.__name__} initialized with parameters: {kwargs}")

    def execute(self, vuln_info: dict):
        """
        Execute the exploit based on vulnerability information.

        Args:
            vuln_info (dict): Information about the vulnerability to exploit.
        """
        self.logger.info(f"Executing exploit with vulnerability info: {vuln_info}")
        # Placeholder for exploit logic
        pass