# scanners/base_scanner.py

import logging

class BaseScanner:
    def __init__(self, core_framework, scan_duration: int = 10):
        """
        Initialize the BaseScanner with core framework and scan duration.

        Args:
            core_framework (CoreFramework): Instance of CoreFramework.
            scan_duration (int): Duration to run the scan in seconds.
        """
        self.core_framework = core_framework
        self.scan_duration = scan_duration
        self.logger = logging.getLogger(self.__class__.__name__)
        self.logger.info(f"{self.__class__.__name__} initialized with scan duration: {self.scan_duration} seconds.")

    def scan(self, target_info: dict) -> dict:
        """
        Perform the scan on the target.

        Args:
            target_info (dict): Information about the target.

        Returns:
            dict: Detected vulnerabilities.
        """
        self.logger.info(f"Scanning target: {target_info}")
        # Placeholder for scan logic
        vulnerabilities = {}
        return vulnerabilities
